--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Barra del navegador -->
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <span class="navbar-text">
     Ilerna
   </span>
@@ -55,7 +55,8 @@
 <div class="container">
 
   <div class="container-fluid row">
-    <div class="col-9">
+
+    <div class="col-lg-9 col-md-12 col-sm-12">
       <!-- Breadcrumb -->
       <ul class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Inicio</a></li>
@@ -64,10 +65,10 @@
       </ul>
 
       <div>
-        <div class="media mt-4">
+        <div class="mt-4">
           <img src="https://www.ilerna.es/blog/wp-content/uploads/2018/12/%C2%A1S%C3%8DGUENOS.png"
-            class="align-self-start mr-3 img-thumbnail" style="width:250px">
-          <div class="media-body">
+            class="float-left img-thumbnail mr-3 mb-3" style="width:250px">
+          <div>
             <h3>Vente a estudiar programación web</h3>
             <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim aliquid, ea a
@@ -90,10 +91,10 @@
 
         <hr>
 
-        <div class="media mt-4">
-          <img src="https://i.ytimg.com/vi/IYFkZtbTMlc/maxresdefault.jpg" class="align-self-start mr-3 img-thumbnail"
+        <div class="mt-4">
+          <img src="https://i.ytimg.com/vi/IYFkZtbTMlc/maxresdefault.jpg" class="float-left img-thumbnail mr-3 mb-3"
             style="width:250px">
-          <div class="media-body">
+          <div>
             <h3>Vente a estudiar Java</h3>
             <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque impedit iusto
@@ -118,11 +119,10 @@
 
         <hr>
 
-        <div class="media mt-4">
+        <div class="mt-4">
           <img src="https://startupxplore.com/uploads/ff8080817171e0bc0171730ca08d00a7-large.png"
-            class="align-self-start mr-3 img-thumbnail" style="width:250px">
-
-          <div class="media-body">
+            class="float-left img-thumbnail mr-3 mb-3" style="width:250px">
+          <div>
             <h3>Vente a estudiar redes</h3>
             <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
             <p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quisquam
@@ -152,22 +152,24 @@
       <hr>
     </div>
 
-    <div class="col-3">
+    <div class="col-3 d-none d-lg-block">
 
       <!-- Menu de la izquierda 1 -->
-      <div>
-        <b>Categorias</b>
+      <div class="pb-4">
+        <p class="mb-n2">Categorias
+        <p>
         <ul class="list-group">
           <li class="list-group-item active">Diseño Web</li>
           <li class="list-group-item">CSS</li>
+          <li class="list-group-item">Cursos</li>
           <li class="list-group-item">Desarollo Web</li>
           <li class="list-group-item">JQuery</li>
         </ul>
       </div>
 
       <!-- Menu de la izquierda 2 -->
-      <div>
-        <b>Articulos Recientes</b>
+      <div class="pb-4">
+        <p class="mb-1">Articulos Recientes</p>
         <ul class="list-group">
           <li class="list-group-item">
             <b>Primer Articulo</b>
@@ -200,19 +202,20 @@
     <li class="page-item"><a class="page-link" href="#">>></a></li>
   </ul>
 
-  <footer>
-    <a>Daniel Garcia Soriano - Clase de DAW2</a>
 
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Cursos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contactos</a>
-      </li>
-    </ul>
+  <footer>
+      <a>Daniel Garcia Soriano - Clase de DAW2</a>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cursos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contactos</a>
+        </li>
+      </ul>
   </footer>
+
 </div>
