--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,104 +54,127 @@
 
 <div class="container">
 
+  <!-- Div para seprar en dos columnas el contnido -->
   <div class="container-fluid row">
 
+    <!-- Columna 1 -->
     <div class="col-lg-9 col-md-12 col-sm-12">
-      <!-- Breadcrumb -->
+
+      <!-- Submenu -->
       <ul class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Inicio</a></li>
         <li class="breadcrumb-item"><a href="#">Categoria</a></li>
         <li class="breadcrumb-item active">Diseño Web</li>
       </ul>
 
-      <div>
-        <div class="mt-4">
-          <img src="https://www.ilerna.es/blog/wp-content/uploads/2018/12/%C2%A1S%C3%8DGUENOS.png"
-            class="float-left img-thumbnail mr-3 mb-3" style="width:250px">
-          <div>
-            <h3>Vente a estudiar programación web</h3>
-            <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
-            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim aliquid, ea a
-              possimus, harum magnam sit,
-              iste quisquam suscipit hic? Assumenda illo dolore sint ad minus ut odit doloremque illum! Ullam veniam
-              libero
-              totam ipsum doloribus alias, natus excepturi quas laudantium eligendi id quaerat fugit nemo magnam
-              laborum,
-              recusandae dolore nesciunt hic temporibus! Ad veritatis quasi, cumque quidem facere itaque expedita iure.
-              Atque vitae dolores obcaecati illum, inventore provident, repellendus quidem minima quia, ex a id. Rerum
-              voluptatum pariatur aut aperiam nobis perspiciatis officia maiores soluta, nisi iste culpa commodi
-              suscipit
-              nam repellendus minima perferendis consequuntur ipsa enim optio?</p>
-          </div>
-          <button type="button" class="btn btn-primary m-1">Leer mas</button>
-          <button type="button" class="btn btn-success m-1">Comentarios
-            <span class="badge badge-light text-success">20</span>
-          </button>
-        </div>
+      <!-- Noticia 1 -->
+      <div class="mt-4">
+        <img src="https://www.ilerna.es/blog/wp-content/uploads/2018/12/%C2%A1S%C3%8DGUENOS.png"
+          class="float-left img-thumbnail mr-3 mb-3 sizeImg">
 
-        <hr>
+        <h3>Vente a estudiar programación web</h3>
 
-        <div class="mt-4">
-          <img src="https://i.ytimg.com/vi/IYFkZtbTMlc/maxresdefault.jpg" class="float-left img-thumbnail mr-3 mb-3"
-            style="width:250px">
-          <div>
-            <h3>Vente a estudiar Java</h3>
-            <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
-            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque impedit iusto
-              aliquam
-              explicabo ratione sit,
-              praesentium omnis enim quidem vel quos? Ipsa sapiente possimus tempore maxime maiores omnis officia est
-              natus
-              rerum adipisci quas deleniti pariatur, unde repellendus, eligendi repudiandae odio. Sit earum dignissimos
-              facilis amet maxime sapiente ab, illum dolores tenetur repellat aliquam et officia, ea corporis fuga
-              necessitatibus quidem provident fugit doloremque similique facere quis odit! Est reprehenderit incidunt
-              maiores sint aliquid aperiam qui repudiandae itaque! Quo quae temporibus beatae, repellendus
-              reprehenderit,
-              quaerat velit itaque tempora quod aliquid laudantium quos soluta earum ad? Aliquid adipisci molestias
-              dolor
-              impedit!</p>
-          </div>
-          <button type="button" class="btn btn-primary m-1">Leer mas</button>
-          <button type="button" class="btn btn-success m-1">Comentarios
-            <span class="badge badge-light text-success">13</span>
-          </button>
-        </div>
+        <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
 
-        <hr>
+        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim aliquid, ea a
+          possimus, harum magnam sit,
+          iste quisquam suscipit hic? Assumenda illo dolore sint ad minus ut odit doloremque illum! Ullam veniam
+          libero
+          totam ipsum doloribus alias, natus excepturi quas laudantium eligendi id quaerat fugit nemo magnam
+          laborum,
+          recusandae dolore nesciunt hic temporibus! Ad veritatis quasi, cumque quidem facere itaque expedita iure.
+          Atque vitae dolores obcaecati illum, inventore provident, repellendus quidem minima quia, ex a id. Rerum
+          voluptatum pariatur aut aperiam nobis perspiciatis officia maiores soluta, nisi iste culpa commodi
+          suscipit
+          nam repellendus minima perferendis consequuntur ipsa enim optio?</p>
 
-        <div class="mt-4">
-          <img src="https://startupxplore.com/uploads/ff8080817171e0bc0171730ca08d00a7-large.png"
-            class="float-left img-thumbnail mr-3 mb-3" style="width:250px">
-          <div>
-            <h3>Vente a estudiar redes</h3>
-            <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
-            <p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quisquam
-              praesentium, perferendis
-              doloribus qui velit impedit alias voluptatibus excepturi quas unde veritatis est officiis dolorum nisi
-              iure
-              distinctio nemo quos neque eum dolorem molestiae amet ipsam beatae. Aliquam enim non dicta quaerat
-              deleniti
-              maiores similique mollitia nihil ducimus dolore tempore officia rerum, nisi modi eveniet esse dolorum
-              atque
-              odit distinctio officiis. Inventore aliquam suscipit eaque debitis expedita, non veritatis repellendus
-              culpa
-              tempora laboriosam ex, incidunt qui quos vel dolorum! Ipsum iste libero at aliquid magni placeat omnis
-              ducimus
-              quibusdam harum, reprehenderit nemo, aspernatur consequatur error fugit esse id mollitia nesciunt!</p>
-          </div>
-
-          <div>
-            <button type="button" class="btn btn-primary m-1">Leer mas</button>
-            <button type="button" class="btn btn-success m-1">Comentarios
-              <span class="badge badge-light text-success">0</span>
-            </button>
-          </div>
-
-        </div>
+        <button type="button" class="btn btn-primary m-1">Leer mas</button>
+        <button type="button" class="btn btn-success m-1">Comentarios
+          <span class="badge badge-light text-success">20</span>
+        </button>
       </div>
+
       <hr>
+
+      <!-- Noticia 2 -->
+      <div class="mt-4">
+        <img src="https://i.ytimg.com/vi/IYFkZtbTMlc/maxresdefault.jpg"
+          class="float-left img-thumbnail mr-3 mb-3 sizeImg">
+
+        <h3>Vente a estudiar Java</h3>
+
+        <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
+
+        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque impedit iusto
+          aliquam
+          explicabo ratione sit,
+          praesentium omnis enim quidem vel quos? Ipsa sapiente possimus tempore maxime maiores omnis officia est
+          natus
+          rerum adipisci quas deleniti pariatur, unde repellendus, eligendi repudiandae odio. Sit earum dignissimos
+          facilis amet maxime sapiente ab, illum dolores tenetur repellat aliquam et officia, ea corporis fuga
+          necessitatibus quidem provident fugit doloremque similique facere quis odit! Est reprehenderit incidunt
+          maiores sint aliquid aperiam qui repudiandae itaque! Quo quae temporibus beatae, repellendus
+          reprehenderit,
+          quaerat velit itaque tempora quod aliquid laudantium quos soluta earum ad? Aliquid adipisci molestias
+          dolor
+          impedit!</p>
+
+        <button type="button" class="btn btn-primary m-1">Leer mas</button>
+        <button type="button" class="btn btn-success m-1">Comentarios
+          <span class="badge badge-light text-success">13</span>
+        </button>
+      </div>
+
+      <hr>
+
+      <!-- Noticia 3 -->
+      <div class="mt-4">
+        <img src="https://startupxplore.com/uploads/ff8080817171e0bc0171730ca08d00a7-large.png"
+          class="float-left img-thumbnail mr-3 mb-3 sizeImg">
+
+        <h3>Vente a estudiar redes</h3>
+
+        <p>1 de Enero del 2020 por <a href="#" class="text-decoration-none">Nelson Perez</a></p>
+
+        <p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quisquam
+          praesentium, perferendis
+          doloribus qui velit impedit alias voluptatibus excepturi quas unde veritatis est officiis dolorum nisi
+          iure
+          distinctio nemo quos neque eum dolorem molestiae amet ipsam beatae. Aliquam enim non dicta quaerat
+          deleniti
+          maiores similique mollitia nihil ducimus dolore tempore officia rerum, nisi modi eveniet esse dolorum
+          atque
+          odit distinctio officiis. Inventore aliquam suscipit eaque debitis expedita, non veritatis repellendus
+          culpa
+          tempora laboriosam ex, incidunt qui quos vel dolorum! Ipsum iste libero at aliquid magni placeat omnis
+          ducimus
+          quibusdam harum, reprehenderit nemo, aspernatur consequatur error fugit esse id mollitia nesciunt!</p>
+
+        <button type="button" class="btn btn-primary m-1">Leer mas</button>
+        <button type="button" class="btn btn-success m-1">Comentarios
+          <span class="badge badge-light text-success">0</span>
+        </button>
+
+      </div>
+
+      <hr>
+
+      <!-- Numero de pagina -->
+      <ul class="pagination mt-4">
+        <li class="page-item"><a class="page-link" href="#">
+            << </a>
+        </li>
+        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item"><a class="page-link" href="#">>></a></li>
+      </ul>
+
     </div>
 
+    <!-- Columna 2 -->
     <div class="col-3 d-none d-lg-block">
 
       <!-- Menu de la izquierda 1 -->
@@ -173,15 +196,15 @@
         <ul class="list-group">
           <li class="list-group-item">
             <b>Primer Articulo</b>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
+            <p class="mb-n1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
           </li>
           <li class="list-group-item">
             <b>Segundo Articulo</b>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
+            <p class="mb-n1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
           </li>
           <li class="list-group-item">
             <b>Tercero Articulo</b>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
+            <p class="mb-n1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, earum.</p>
           </li>
         </ul>
       </div>
@@ -189,33 +212,21 @@
     </div>
 
   </div>
-  <!-- Numero de pagina -->
-  <ul class="pagination mt-4">
-    <li class="page-item"><a class="page-link" href="#">
-        << </a>
-    </li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item"><a class="page-link" href="#">5</a></li>
-    <li class="page-item"><a class="page-link" href="#">>></a></li>
-  </ul>
 
-
+  <!-- Footer, abajo del todo separado del div con 2 columnas -->
   <footer>
-      <a>Daniel Garcia Soriano - Clase de DAW2</a>
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cursos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contactos</a>
-        </li>
-      </ul>
+    <a>Daniel Garcia Soriano - Clase de DAW2</a>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Cursos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contactos</a>
+      </li>
+    </ul>
   </footer>
 
 </div>
